# y9

./: CMakeLists.txt  arena.h  attn.h  autograd_vn_train.c  build_wrapper.bat  conv2d.c  conv2d.h  example_usage.py  ffn.h  ln.h  pool.h  py_bindings.md  pyproject.toml  python_wrapper.c  pytorch_interface.py  readme.md  tensor.h  test_conv2d_ag.c  test_conv2d_nag.c  test_muon_autograd.c  threadpool.c  threadpool.h  vn_train_main.c  vn_transf_mdl.h
test/: autograd_output.txt  full_output.txt  normal_output.txt  output.txt  test.c  test_omp.c  test_training_omp.c
y9/: __init__.py
