[build-system]
requires = ["scikit-build-core", "nanobind >= 2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "y9-pytorch"
version = "0.1.0"
description = "PyTorch-like interface for y9 C backend with autograd"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["pytorch", "deep-learning", "autograd", "neural-networks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.scikit-build]
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]
wheel.packages = ["y9"]
